--- a/app/src/main/res/layout/activity_section_f6_s2.xml
+++ b/app/src/main/res/layout/activity_section_f6_s2.xml
@@ -172,6 +172,7 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:onCheckedChanged="@{()->f6203.clearCheck() }"
                         android:id="@+id/f6202"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
