--- a/app/src/main/res/layout/activity_section_f6_s3.xml
+++ b/app/src/main/res/layout/activity_section_f6_s3.xml
@@ -118,7 +118,8 @@
                     <RadioGroup
                         android:id="@+id/f6302"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f6303.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f6302a"
@@ -265,7 +266,8 @@
                     <RadioGroup
                         android:id="@+id/f6304"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f6305.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f6304a"
