--- a/app/src/main/res/layout/activity_section_f6_s6.xml
+++ b/app/src/main/res/layout/activity_section_f6_s6.xml
@@ -228,6 +228,7 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:onCheckedChanged="@{()->f6604.clearCheck() }"
                         android:id="@+id/f6603"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
