--- a/app/src/main/res/layout/activity_section_f7_s6.xml
+++ b/app/src/main/res/layout/activity_section_f7_s6.xml
@@ -366,7 +366,8 @@
                     <RadioGroup
                         android:id="@+id/f7505"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f7507.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f7505a"
