--- a/app/src/main/res/layout/activity_section_f9_s3.xml
+++ b/app/src/main/res/layout/activity_section_f9_s3.xml
@@ -73,7 +73,8 @@
                     <RadioGroup
                         android:id="@+id/f9301"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f9302.clearCheck() + f9303.clearCheck() + f9304.clearCheck()}">
 
                         <RadioButton
                             android:id="@+id/f9301a"
@@ -1356,6 +1357,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:onCheckedChanged="@{()->f9322.clearCheck() }"
                             android:id="@+id/f9321"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
