--- a/app/src/main/res/layout/activity_section_f9_s4.xml
+++ b/app/src/main/res/layout/activity_section_f9_s4.xml
@@ -73,7 +73,8 @@
                     <RadioGroup
                         android:id="@+id/f9401"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f9403.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f9401a"
@@ -290,7 +291,8 @@
                         <RadioGroup
                             android:id="@+id/f9403"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:onCheckedChanged="@{()->f9404.clearCheck() + f9405.clearCheck()}">
 
                             <RadioButton
                                 android:id="@+id/f9403a"
@@ -598,8 +600,8 @@
                         android:text="@={form.f9407}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -845,7 +847,8 @@
                     <RadioGroup
                         android:id="@+id/f9411"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f9412.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f9411a"
