--- a/app/src/main/res/layout/activity_section_f5_s1.xml
+++ b/app/src/main/res/layout/activity_section_f5_s1.xml
@@ -300,13 +300,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/f5106"
                         android:inputType="number"
-                        android:maxLength="3"
-                        android:text="@={form.f5106}"
-
-
-                        app:minValue="1"
-                        app:maxValue="100"
-                        app:type="range" />
+                        android:maxLength="11"
+                        android:text="@={form.f5106}" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
